# Hobby

./: README.md
01_game_of_life/: CMakeLists.txt  Makefile  gol  ideas.md  main.c
01_game_of_life/src/: game.cpp  game.h  main.cpp  window.cpp  window.h
02_todo/: Makefile  todo
03_tui_balls/: Makefile  balls  main.c
04_password_manager/: Makefile  main.c  password.txt  passwordmanager
05_text_editor/: Makefile  editor  main.c
06_tic_tac_toe/: Makefile  ideas.md  main.c  tictactoe  todo.md
07_wordle/: wordle.py
08_hash_table/: Makefile  file1.txt  hash  main.c  test.txt
09_asteroids/: 2  CMakeLists.txt
09_asteroids/src/: game.cpp  game.h  gameobject.h  geometry.cpp  geometry.h  window.cpp  window.h
10_dynamic_array/: Makefile
11_tcp/: Makefile  client  client.c  server
